# TurboGGUF

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
scripts/: benchmark.sh  quantize.sh
tests/: test_cli.py  test_equivalence.py  test_gemma.py  test_hadamard.py  test_rotation.py  test_roundtrip.py  test_turboquant_plus.py
turbogguf/: __init__.py  cli.py  equivalence.py  evaluate.py  export.py  hadamard.py  model_loader.py  rotation.py
turbogguf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
turbogguf/arch/: __init__.py  base.py  gemma.py  gemma4.py  llama.py  mistral.py  qwen2.py  qwen3_moe.py
turbogguf/data/: auto_calibration.txt  calibration_prompts.txt
turbogguf/turboquant_plus/: __init__.py  codebook.py  hw_replay.py  kv_cache.py  outlier.py  polar_quant.py  qjl.py  rotation.py  turboquant.py  utils.py
